Adding to persona-monitor : check_http_hash, dynect api check. Fixing opsview virtualhost and yum repo

--- a/chef/cookbooks/persona-monitor/files/default/etc/httpd/conf.d/opsview.conf
+++ b/chef/cookbooks/persona-monitor/files/default/etc/httpd/conf.d/opsview.conf
@@ -1,5 +1,5 @@
 # This is the apache configuration when running opsview-web over a proxy mechanism
-#<VirtualHost *>
+<VirtualHost *>
 #ServerName 195.137.61.81
 #ServerAdmin opsview@opsview.com
 
@@ -109,4 +109,4 @@ ProxyPass / http://127.0.0.1:3000/ retry=5
 ProxyPassReverse / http://127.0.0.1:3000/
 #ProxyPreserveHost On
 
-#</VirtualHost>
+</VirtualHost>
