Enabling DB backups

--- a/chef/cookbooks/persona-db/files/default/usr/local/nagios/etc/nrpe_local/override.cfg
+++ b/chef/cookbooks/persona-db/files/default/usr/local/nagios/etc/nrpe_local/override.cfg
@@ -1,2 +1,7 @@
 command[check_mysql_innodb]=/usr/local/nagios/libexec/check_mysql_innodb
 command[check_mysql_percona_heartbeat]=/usr/local/nagios/libexec/check_mysql_percona_heartbeat $ARG1$ $ARG2$ $ARG3$ $ARG4$
+
+# 90000 seconds = 25 hours since backups run every day at 3:00 AM
+# 115200 seconds = 32 hours so that a failed backup alerts at 11:00 AM the following day
+# 6 = 6 bytes long which is longer than the string "fail" and shorter than the string "success"
+command[check_mysql_backup_state]=/usr/local/nagios/libexec/check_file_age -w 90000 -c 115200 -C 6 -f /data/backups/.state
